k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: foodgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: elizavetanovozhilova/foodgram-backend:v1.0
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static
              mountPath: /app/backend_static
            - name: media
              mountPath: /app/backend_media
      volumes:
        - name: static
          emptyDir: {}
        - name: media
          emptyDir: {}
