k8s/locust-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: foodgram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
      role: master
  template:
    metadata:
      labels:
        app: locust
        role: master
    spec:
      containers:
        - name: master
          image: locustio/locust:2.24.1
          args:
            - "-f"
            - "/mnt/locust/locustfile.py"
            - "--master"
            - "--host=http://nginx"
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: locustfile
              mountPath: /mnt/locust
      volumes:
        - name: locustfile
          configMap:
            name: locustfile
