k8s/locust-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: foodgram
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust
      role: worker
  template:
    metadata:
      labels:
        app: locust
        role: worker
    spec:
      containers:
        - name: worker
          image: locustio/locust:2.24.1
          args:
            - "-f"
            - "/mnt/locust/locustfile.py"
            - "--worker"
            - "--master-host=locust-master"
          volumeMounts:
            - name: locustfile
              mountPath: /mnt/locust
      volumes:
        - name: locustfile
          configMap:
            name: locustfile
