k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: foodgram
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30082
  type: NodePort
