k8s/locust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-test-v2-webui
  namespace: foodgram
spec:
  selector:
    app: locust
    role: master
  ports:
    - port: 8089
      targetPort: 8089
