k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: foodgram
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: foodgram
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
